Fix scrolling issue on iOS

--- a/sass/sensing_evolution.scss
+++ b/sass/sensing_evolution.scss
@@ -385,7 +385,6 @@ div.item-title {
         padding: 0px 10px;
       }
       height: 100%;
-      overflow: scroll;
     }
     .try-again {
       display: none;
